# facetool

./: .gitignore  README.md  pyproject.toml
example/: face_detection.ipynb
src/: detect.py
src/demo/: yunet.py
src/ml/: yunet.py
